--- a/FELFactura/FELFactura/FELFactura.csproj
+++ b/FELFactura/FELFactura/FELFactura.csproj
@@ -88,6 +88,7 @@
       <DependentUpon>SolicitarToken.asmx</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="XMLAnular.cs" />
     <Compile Include="XMLFactura.cs" />
   </ItemGroup>
   <ItemGroup>
