--- a/FELFactura/FELFactura/FELFactura.csproj
+++ b/FELFactura/FELFactura/FELFactura.csproj
@@ -67,11 +67,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AnnularDocumentWS.asmx" />
     <Content Include="RegisterDocumentWS.asmx" />
     <Content Include="SolicitarToken.asmx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnnularDocument.cs" />
+    <Compile Include="AnnularDocumentWS.asmx.cs">
+      <DependentUpon>AnnularDocumentWS.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Constants.cs" />
     <Compile Include="GetRequestToken.cs" />
     <Compile Include="Instancia.cs" />
@@ -90,6 +96,7 @@
     </Compile>
     <Compile Include="XMLAnular.cs" />
     <Compile Include="XMLFactura.cs" />
+    <Compile Include="XMLFacturaEspecial.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
