--- a/FELFactura/Modelos/Modelos.csproj
+++ b/FELFactura/Modelos/Modelos.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Receptor.cs" />
+    <Compile Include="ReferenciasNota.cs" />
     <Compile Include="Totales.cs" />
     <Compile Include="TotalImpuestos.cs" />
   </ItemGroup>
